Complete responsive Spotify clone with modern features

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                         <div class="nav-icons">
                            <img src="./assets/backward_icon.png" alt="Back">
                            <img src="./assets/forward_icon.png" class="hide" alt="Forward">
-                           
+                           <div class="mobile-menu-btn hide-desktop">
+                              <i class="fa-solid fa-bars"></i>
+                           </div>
                         </div>
                        <div class="download">
                         <button class="badge nav-item hide"> Explore Premium </button>
-                        <button class="badge nav-item dark-badge"><i class="fa-regular fa-circle-down " style="margin-right: 5px ;"></i> Install App </button>
+                        <button class="badge nav-item dark-badge hide-mobile"><i class="fa-regular fa-circle-down " style="margin-right: 5px ;"></i> Install App </button>
                         <i class="fa-regular fa-user nav-item"></i>
                        </div> 
                      </div>
