change the Album poster

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                <div class="album">
                     <img src="./assets/album_picture.jpeg" alt="Album Cover">
                   <div class="name-artist">
-                     <p class="daylight">DayLight</p>
-                     <p class="david">David Kushner</p>
+                     <p class="daylight">Main Nahi Janta</p>
+                     <p class="david">Piyush Mishra</p>
                   </div>
                   <div class="album-icon">
                      <i class="fa-regular fa-heart"></i>
